--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
          <version>2.2</version>
          <configuration>
          <server>tomcat-development-server</server>
-         <url>http://http://100.24.117.186:8080/manager/text</url>
+         <url>http://100.24.117.186:8080/manager/text</url>
          <warFile>target\hello.war</warFile>
          <path>/hello</path>
          <username>jblom</username>
